--- a/style.css
+++ b/style.css
@@ -153,7 +153,8 @@ div #contact:hover {
 
 @media only screen and (min-device-width: 414px) and (max-device-width: 736px), only screen and (min-device-width: 320px) and (max-device-width: 480px) {
 	.sidebar {
-		position: absolute;
+		position: fixed;
+		overflow: auto;
 		width: 240px;
 	}
 	.content {
